# iqdb-search-bot

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  werf.yaml
.helm/: values.yaml
.helm/templates/: installation.yaml  vpa.yaml
src/: client.py  img_handler.py  secrets.py  start_handler.py  url_handler.py
