[tool.poetry]
name = "iqdb-search-bot"
version = "0.1.0"
description = ""
authors = ["paulll <paulll@derpy.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
aiofiles = "^0.8.0"
aiohttp = "^3.8.1"
pyquery = "^1.4.3"
aiodns = "^3.0.0"
cchardet = "^2.1.7"
Telethon = "^1.24.0"
aioipfs = "^0.5.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
