[tool.poetry]
name = "iqdb-search-bot"
version = "0.1.0"
description = ""
authors = ["paulll <paulll@derpy.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
aiofiles = "^0.8.0"
aiohttp = "^3.8.1"
pyquery = "^1.4.3"
aiodns = "^3.0.0"
cchardet = "^2.1.7"
Telethon = "^1.24.0"
aioipfs = "^0.5.5"

[tool.poetry.dev-dependencies]


[tool.pdm]
includes = []
[tool.pdm.dev-dependencies]
dev = []
[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"


[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
authors = [
    {name = "paulll", email = "paulll@derpy.ru"},
]
license-expression = "MIT"
requires-python = ">=3.9,<4.0"
dependencies = [
    "aiofiles<1.0.0,>=0.8.0",
    "aiohttp<4.0.0,>=3.8.1",
    "pyquery<2.0.0,>=1.4.3",
    "aiodns<4.0.0,>=3.0.0",
    "cchardet<3.0.0,>=2.1.7",
    "Telethon<2.0.0,>=1.24.0",
    "aioipfs<1.0.0,>=0.5.5",
]
name = "iqdb-search-bot"
version = "0.1.0"
description = ""

[project.urls]
